# matrixgfx

./: CMakeLists.txt  README.md  run.sh
clock/src/: clock.c  fireworks.c  fireworks.h  ledclock.c  ledclock.h  mspacman.c  mspacman.h  nyancat.c  nyancat.h  sonic.c  sonic.h  yoshi.c  yoshi.h
examples/fire/: fire.c  fire.h
examples/plasma/: README.md  main.c  plasma.c  plasma.h
examples/scroller/: scroller.c
fonts/: 7segment.bdf  README.md
matrixgfx/include/: matrixgfx.h
matrixgfx/src/: animation.c  color.c  gifreader.c  image.c  jpegreader.c  matrix.c  scroller.c
